[project]
name = "kobe"
version = "0.0.1"
authors = [
  { name="", email="" },
]
description = "A productivity tool"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aaronsgithub/kobe.git"
"Bug Tracker" = "https://github.com/aaronsgithub/kobe/issues"